# tagon-os

./: Makefile  README.md
.github/actions/alpine-raspberry-builder/: Dockerfile  action.yml
.github/workflows/: build.yml
image/: Makefile  builder.sh  config.env  debug-builder.sh
image/input/: config.env  image.sh
image/output/: README.md
mgmtd/: Cargo.toml
mgmtd/src/: main.rs
networkd/: Cargo.toml
tagon-networkd/src/: main.rs
