[package]
name = "tagon-auto-updater"
version = "0.1.0"
authors = ["Moritz Clasmeier <mtesseract@silverratio.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.5.2"
slog-async = "2.5.0"
slog-term = "2.6.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
github-rs = "0.7"
slog-scope = "4.3.0"
